# nops-precommit-client

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  nOps-action.yml  setup.cfg  setup.py
cli_project/: main_cli.py
cli_project/libs/: terraform.py
cli_project/subcommands/pricing/: terraform_pricing.py
cli_project/utils/: execute_command.py
nops_cli/: main.py
nops_cli/constants/: helm_recommendations_constants.py  input_enums.py  resource_mapping.py
nops_cli/libs/: aws_lib.py  common_lib.py  get_accounts.py  terraform.py
nops_cli/subcommands/dependancy/: dependency.py  terraform_dependency.py
nops_cli/subcommands/get_accounts/: get_accounts.py
nops_cli/subcommands/github/: github_action_pull_request.py
nops_cli/subcommands/helm_recommendation/: helm_recommendations.py
nops_cli/subcommands/pricing/: checkov_pricing.py  pricing.py  terraform_pricing.py
nops_cli/utils/: execute_command.py  logger_util.py
