# setup.cfg
[metadata]
name = nops_cli_project
description = print the arguments you pass
version = 0.1.0
author = Yograj Shisode
author_email = yograj.shisode@opcito.com
license = MIT
url = https://jorgealvarado.me

[options]
packages = find:

[options.entry_points]
console_scripts =
    nops-cli = nops_cli.main:main
